-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.9.0
-
None
-
3
-
9223372036854775807
Dec 22 00:13:24 compute-6-15 kernel: Memory cgroup out of memory: Kill process 24072 score 63 or sacrifice child
Dec 22 00:13:25 compute-6-15 kernel: LustreError: 22583:0:(osc_lock.c:315:osc_lock_upcall()) ASSERTION( !IS_ERR(env) ) failed:
Dec 22 00:13:25 compute-6-15 kernel: LustreError: 22583:0:(osc_lock.c:315:osc_lock_upcall()) LBUG
Dec 22 00:13:25 compute-6-15 kernel: LustreError: 22583:0:(osc_lock.c:315:osc_lock_upcall()) ASSERTION( !IS_ERR(env) ) failed:
Dec 22 00:13:25 compute-6-15 kernel: LustreError: 22583:0:(osc_lock.c:315:osc_lock_upcall()) LBUG
Dec 22 00:13:25 compute-6-15 kernel: Kernel panic - not syncing: LBUG